Fixed footer overflow

--- a/src/main/webapp/style/front.css
+++ b/src/main/webapp/style/front.css
@@ -18,7 +18,7 @@ body {
 }
 .body {
     padding:10px;
-    padding-bottom:60px;   /* Height of the footer */
+    padding-bottom:150px;   /* Height of the footer */
 }
 .footer {
     position:absolute;
